force-app/main/default/objects/Case_Note__c/Case_Note__c.object-meta.xml
<CustomObject>
    <description>Daily interaction journal. One record per phone call, in-person visit, collateral contact, court appearance, service touchpoint, etc. The unified "what happened" log across all survivor cases.</description>
    <label>Case Note</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Case Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>