force-app/main/default/objects/Case_Note__c/fields/Advocate__c.field-meta.xml
<CustomField>
    <fullName>Advocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SFTS staff member who recorded this interaction. Auto-defaults to current user.</description>
    <label>Advocate</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Case Notes Authored</relationshipLabel>
    <relationshipName>Case_Notes_Authored</relationshipName>
    <type>Lookup</type>
</CustomField>