force-app/main/default/objects/Case_Note__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The full note text. What happened, what was said, what was agreed.</description>
    <label>Note Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>