force-app/main/default/objects/Case_Note__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag notes containing especially sensitive content (e.g., medical, attorney-privileged, custody-related). UI hint only — does not auto-restrict sharing; that's controlled by sharing rules.</description>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>