force-app/main/default/objects/Case_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The survivor (Contact) this note is about. Required — every note belongs to a person, not a project.</description>
    <label>Survivor (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>