force-app/main/default/objects/Case_Note__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>How long the interaction took, in minutes. Used for time-tracking and VOCA grant reporting (when this note is tied to a Service_Episode).</description>
    <label>Duration (minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>