force-app/main/default/objects/Case_Note__c/fields/Financial_Counseling__c.field-meta.xml
<CustomField>
    <fullName>Financial_Counseling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial Counseling session this Case Note follows from. Auto-set when "Log Case Note" is launched from an FC record. Pattern: post-session reflection or follow-up notes.</description>
    <label>Financial Counseling Session</label>
    <referenceTo>Financial_Counseling__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>