force-app/main/default/objects/Case_Note__c/fields/Hotline_Call__c.field-meta.xml
<CustomField>
    <fullName>Hotline_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Originating Hotline Call this Case Note follows from. Auto-set when "Log Case Note" is launched from a Hotline Call record. Lets the call's record page show this note in its Related list.</description>
    <label>Hotline Call</label>
    <referenceTo>Hotline_Call__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>