force-app/main/default/objects/Case_Note__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Optional link to the Intake/case this note relates to. Use to group notes by case lifecycle when a Contact has multiple intakes over time.</description>
    <label>Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>