force-app/main/default/objects/Case_Note__c/fields/Note_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Note_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When this interaction happened (not when the note was written — back-dated entries are fine).</description>
    <label>Interaction Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>