force-app/main/default/objects/Case_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <description>What kind of interaction this note documents. Drives reporting (e.g., "how many in-person visits this month").</description>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Contact</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Collateral Contact</fullName>
            </value>
            <value>
                <fullName>Service Provided</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Case Conference</fullName>
            </value>
            <value>
                <fullName>Email/Text</fullName>
            </value>
            <value>
                <fullName>Safety Plan Review</fullName>
            </value>
            <value>
                <fullName>Closing Note</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>