force-app/main/default/objects/Case_Note__c/fields/Self_Sufficiency_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Self_Sufficiency_Matrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-Sufficiency Matrix assessment this Case Note follows from. Auto-set when "Log Case Note" is launched from an SSM record. Pattern: domain-specific follow-up plans after the assessment.</description>
    <label>SSM Assessment</label>
    <referenceTo>Self_Sufficiency_Matrix__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>