force-app/main/default/objects/Case_Note__c/fields/Shelter_Stay__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Stay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shelter Stay this Case Note belongs to. Auto-set when "Log Case Note" is launched from a Shelter Stay record. Pattern: daily check-in notes during a stay.</description>
    <label>Shelter Stay</label>
    <referenceTo>Shelter_Stay__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>