force-app/main/default/objects/Case_Note__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>One-line summary of what happened. Shows in list views — keep it scannable.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>