force-app/main/default/objects/Case_Note__c/listViews/My_Notes_This_Week.listView-meta.xml
<ListView>
    <fullName>My_Notes_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Note_Type__c</columns>
    <columns>Note_DateTime__c</columns>
    <columns>Subject__c</columns>
    <columns>Duration_Minutes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Note_DateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>My Notes This Week</label>
</ListView>