force-app/main/default/objects/Case_Note__c/listViews/Recent_Notes.listView-meta.xml
<ListView>
    <fullName>Recent_Notes</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Note_Type__c</columns>
    <columns>Note_DateTime__c</columns>
    <columns>Subject__c</columns>
    <columns>Advocate__c</columns>
    <columns>Duration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Note_DateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Notes (30 days)</label>
</ListView>